# djepipepi

./: README.md  pyproject.toml
client/: README.md  package.json
client/src/: App.tsx
client/src/api/: transcriptionService.ts
convex/: package.json
single-file-architecture/: .gitignore  README.md  code_counter.py  sfa_blog_agent.py  sfa_blog_agent_v2.py  sfa_sqlite_openai_v2.py  sfa_transcription_agent.py  test_blog_agent.py
single-file-architecture/data/blogs/: 2d687cce-e3bb-4967-a249-9c1e36da54cf.json  a6d1a5b4-64c0-47e6-ab77-31f7dd6a2856.json  aea39383-b5de-4834-bb4b-ed5be120b3ac.json
single-file-architecture/data/chunks/: age_of_agents_how_to_evolve_your_o3_mini_prompts_20250324_151153_manifest.json  ai_coding_devlog_claude_code_has_changed_software_20250324_151153_manifest.json  best_codebase_architecture_for_ai_coding_and_ai_20250324_143507_manifest.json  ejpqna_unlocking_the_fourth_dimension_how_lucid_20250322_203322_manifest.json  gpt_4_5_flop_claude_3_7_sonnet_starter_pack_what_20250324_151153_manifest.json  my_top_6_claude_code_pro_tips_for_ai_coding_mcp_20250324_151153_manifest.json  single_file_agents_python_scripts_with_astral_uv_20250324_151153_manifest.json
single-file-architecture/data/db/: blog.sqlite  transcriptions.sqlite
single-file-architecture/data/output/: 3_of_the_population_are_psychopaths__20250326_224640_transcript.json  5_practical_ways_to_work_with_resistance_to_emotions_feelings_20250325_143447_transcript.json  advice_for_programming_dangerous_code_cursor_team_and_lex_fridman_20250326_223839_transcript.json  (+62 more)
(+119 files in other folders)
