[project]
name = "djepipepi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "firecrawl>=1.15.0",
    "frontmatter>=3.0.8",
    "markdown>=3.7",
    "openai>=1.68.2",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
